<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entrevistas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="Entrevistas"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_fecha"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tiempo transcurrido"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Chronometer
                    android:id="@+id/cronometro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:text="Hora"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_hora"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Latitud" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Longitud" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ubicación"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_latitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txt_longitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <EditText
                android:id="@+id/txt_vacante"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="10"
                android:hint="Área de la vacante"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_edad"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_Telefono"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_correo"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Seleccione el tipo de horario de trabajo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


            <Spinner
                android:id="@+id/spinnertiempo"
                android:layout_width="284dp"
                android:layout_height="65dp"
                android:contentDescription="Selecciona el tiempo" />

            <EditText
                android:id="@+id/txt_situacion"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_situacion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_nivel"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_educacion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_horas"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_horas"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_idioma"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_idioma"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_otras"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_otras"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_notas"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txte_notas"
                android:inputType="textPersonName" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/btn_guardarentre"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#2EE10E"
                    android:text="@string/btn_guardar"/>

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#F35C21"
                    android:text="Cancelar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>