<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="242dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="351dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="REGISTRARSE"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="75dp" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="351dp"
                android:layout_height="57dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/txt_usuario"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="185dp" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="351dp"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/txt_contraseña"
                android:inputType="textPassword"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="288dp" />

            <EditText
                android:id="@+id/contrasenaconfimacion"
                android:layout_width="351dp"
                android:layout_height="64dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:ems="10"
                android:hint="@string/txt_confircontraseña"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="393dp" />

            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="351dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="registrarUsuarios"
                android:text="@string/btn_registrarse"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="561dp" />

            <Button
                android:id="@+id/btn_iniciar"
                android:layout_width="200dp"
                android:layout_height="64dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="iriniciar"
                android:text="@string/btn_iniciar"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="494dp" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>