<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gproyectos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="Gestión de Proyectos"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_fecha"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tiempo transcurrido"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Chronometer
                    android:id="@+id/cronometro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:text="Hora"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_hora"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Latitud" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Longitud" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ubicación"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/txt_latitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txt_longitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>


            <EditText
                android:id="@+id/txt_Area"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txt_area"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Jefe"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txt_jefe"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Nombrepro"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txt_actividad"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Actividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Actividad "
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_Fechain"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/txt_fechain"
                android:inputType="textPersonName" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/txt_Costo"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_costo"
                android:inputType="number" />

            <EditText
                android:id="@+id/edt_notarec"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txt_nota"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btn_guardarpro"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="#2EE10E"
                android:text="@string/btn_guardar" />
            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="#F35C21"
                android:text="Cancelar" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>