<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="242dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="351dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="INICIAR SESIÓN"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="visible"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="25dp"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="344dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="@string/txt_usuario"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="88dp" />


            <EditText
                android:id="@+id/contrasena"
                android:layout_width="344dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="@string/txt_contraseña"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="151dp" />

            <Button
                android:id="@+id/btn_iniciar"
                android:layout_width="351dp"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="iniciarSecion"
                android:text="@string/btn_iniciar"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="234dp" />

            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:onClick="irRegistro"
                android:text="@string/btn_registrarse"
                tools:layout_editor_absoluteX="300dp"
                tools:layout_editor_absoluteY="300dp" />


         </LinearLayout>


     </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>